--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                           <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
                         </li>
                         <li>
-                          <a href="/lua.php" data-drupal-link-system-path="lua">Lua</a>
+                          <a href="/lua.html" data-drupal-link-system-path="lua">Lua</a>
                         </li>
                         <li>
                           <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
