--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                           <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
                         </li>
                         <li>
-                          <a href="/about.php" data-drupal-link-system-path="node/15">О нас</a>
+                          <a href="/about.html" data-drupal-link-system-path="node/15">О нас</a>
                         </li>
                       </ul>
                     </nav>
@@ -100,13 +100,13 @@
                         <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
                       </li>
                       <li>
-                        <a href="/lua.php" data-drupal-link-system-path="lua">Lua</a>
+                        <a href="/lua.html" data-drupal-link-system-path="lua">Lua</a>
                       </li>
                       <li>
                         <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
                       </li>
                       <li>
-                        <a href="/about.php" data-drupal-link-system-path="node/15">О нас</a>
+                        <a href="/about.html" data-drupal-link-system-path="node/15">О нас</a>
                       </li>
                     </ul>
 
@@ -139,7 +139,7 @@
                         <div class="row d-flex justify-content-center">
                           <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="/lua.php">LUA</a>
+                              <a href="/lua.html">LUA</a>
                             </div>
                           </div>
                           <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
@@ -160,9 +160,100 @@
                     <span></span>
                   </div>
 
-                  <?php
-                    require "news.php";
-                  ?>
+                  <div class="main-page--news">
+                    <div class="main-page--news--note">
+                      <div class="main-page--news--note-lg">
+                        <div class="row align-items-center">
+                          <div class="col-3">
+                            <div class="main-page--news--note-date">
+                              30.05.2020
+                            </div>
+                          </div>
+                          <div class="col-6">
+                            <div class="main-page--news--note-title">
+                              Добавлены новости
+                            </div>
+                          </div>
+                          <div class="col-3">
+                            <div class="main-page--news--note-section">
+                              Сайт
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="main-page--news--note-sm">
+                        <div>
+                          <div class="main-page--news--note-title">
+                            Добавлены новости
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-6">
+                            <div class="main-page--news--note-date">
+                              30.05.2020
+                            </div>
+                          </div>
+                          <div class="col-6">
+                            <div class="main-page--news--note-section">
+                              Сайт
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="main-page--news--note-content">
+                        <p>Добавлено отображение новостей на главной странице сайта. В этом разделе будут отображаться все последние новости сайта.</p>
+
+                      </div>
+                    </div>
+                    <div class="main-page--news--note">
+                      <div class="main-page--news--note-lg">
+                        <div class="row align-items-center">
+                          <div class="col-3">
+                            <div class="main-page--news--note-date">
+                              24.05.2020
+                            </div>
+                          </div>
+                          <div class="col-6">
+                            <div class="main-page--news--note-title">
+                              Обновление сайта
+                            </div>
+                          </div>
+                          <div class="col-3">
+                            <div class="main-page--news--note-section">
+                              Сайт
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="main-page--news--note-sm">
+                        <div>
+                          <div class="main-page--news--note-title">
+                            Обновление сайта
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-6">
+                            <div class="main-page--news--note-date">
+                              24.05.2020
+                            </div>
+                          </div>
+                          <div class="col-6">
+                            <div class="main-page--news--note-section">
+                              Сайт
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="main-page--news--note-content">
+                        <p>Частично изменён дизайн сайта. Улучшено отображение некоторых элементов и информативность сайта в целом. Страница со списком Lua скриптов перенесена с главной и создана для неё новая. На страницах скриптов добавлена дата обновления, актуальная версия, совместимость с проектами,&nbsp;список зависимостей скрипта от сторонних плагинов и дополнений. Всё это направлено на облегчение установки скриптов и их использования.</p>
+
+                      </div>
+                    </div>
+                  </div>
                 </div>
 
               </div>
