--- a/lua.html
+++ b/lua.html
@@ -78,13 +78,13 @@
                         <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
                       </li>
                       <li>
-                        <a href="/lua.php" data-drupal-link-system-path="lua">Lua</a>
+                        <a href="/lua.html" data-drupal-link-system-path="lua">Lua</a>
                       </li>
                       <li>
                         <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
                       </li>
                       <li>
-                        <a href="/about.php" data-drupal-link-system-path="node/15">О нас</a>
+                        <a href="/about.html" data-drupal-link-system-path="node/15">О нас</a>
                       </li>
                     </ul>
                   </nav>
@@ -102,13 +102,13 @@
                       <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
                     </li>
                     <li>
-                      <a href="/lua.php" data-drupal-link-system-path="lua">Lua</a>
+                      <a href="/lua.html" data-drupal-link-system-path="lua">Lua</a>
                     </li>
                     <li>
                       <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
                     </li>
                     <li>
-                      <a href="/about.php" data-drupal-link-system-path="node/15">О нас</a>
+                      <a href="/about.html" data-drupal-link-system-path="node/15">О нас</a>
                     </li>
                   </ul>
 
@@ -161,7 +161,7 @@
                                       </h5>
                           <p class="card-text">Многофункциональный скрипт работающий на базе библиотеки 'MoonLoader'.
                           </p>
-                          <a href="/fbitools.php" class="btn btn-outline-primary card-button">Перейти</a>
+                          <a href="/fbitools.html" class="btn btn-outline-primary card-button">Перейти</a>
                         </div>
                         <div class="card-footer">
                           <div class="row">
