--- a/about.html
+++ b/about.html
@@ -78,13 +78,13 @@
                         <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
                       </li>
                       <li>
-                        <a href="/lua.php" data-drupal-link-system-path="lua">Lua</a>
+                        <a href="/lua.html" data-drupal-link-system-path="lua">Lua</a>
                       </li>
                       <li>
                         <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
                       </li>
                       <li>
-                        <a href="/about.php" data-drupal-link-system-path="node/15">О нас</a>
+                        <a href="/about.html" data-drupal-link-system-path="node/15">О нас</a>
                       </li>
                     </ul>
                   </nav>
@@ -102,13 +102,13 @@
                       <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
                     </li>
                     <li>
-                      <a href="/lua.php" data-drupal-link-system-path="lua">Lua</a>
+                      <a href="/lua.html" data-drupal-link-system-path="lua">Lua</a>
                     </li>
                     <li>
                       <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
                     </li>
                     <li>
-                      <a href="/about.php" data-drupal-link-system-path="node/15">О нас</a>
+                      <a href="/about.html" data-drupal-link-system-path="node/15">О нас</a>
                     </li>
                   </ul>
 
