--- a/fbitools.html
+++ b/fbitools.html
@@ -391,7 +391,7 @@
 
     <footer class="footer">
       <div class="footer-wrap">
-        <span class="footer-copyright"><a href="https://vl4sovdev.beget.tech/">VL4SOV DEV</a> © 2021</span>
+        <span class="footer-copyright"><a href="/">VL4SOV DEV</a> © 2021</span>
 
       </div>
     </footer>
