--- a/lua.html
+++ b/lua.html
@@ -9,8 +9,6 @@
   <meta name="HandheldFriendly" content="true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="/themes/custom/light/favicon.ico" type="image/vnd.microsoft.icon" />
-
-  <title>Главная | VL4SOV DEV</title>
   <link rel="stylesheet" media="all" href="/themes/custom/light/css/css1.css" />
   <link rel="stylesheet" media="all" href="//fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;display=swap&amp;subset=cyrillic" />
   <link rel="stylesheet" media="all" href="//fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&amp;display=swap&amp;subset=cyrillic" />
@@ -46,7 +44,7 @@
 
   <meta property="og:site_name" content="VL4SOV DEV" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://vl4sovdev.beget.tech/" />
+  <meta property="og:url" content="/" />
   <meta property="og:image" content="/themes/custom/light/img/icons/og.png" />
   <meta property="og:description" content="LUA скрипты для GTA:SA:MP" />
 </head>
@@ -226,7 +224,7 @@
 
     <footer class="footer">
       <div class="footer-wrap">
-        <span class="footer-copyright"><a href="https://vl4sovdev.beget.tech/">VL4SOV DEV</a> © 2021</span>
+        <span class="footer-copyright"><a href="/">VL4SOV DEV</a> © 2021</span>
 
       </div>
     </footer>
