--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
   <meta property="og:site_name" content="VL4SOV DEV" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://vl4sovdev.beget.tech/" />
+  <meta property="og:url" content="/" />
   <meta property="og:image" content="/themes/custom/light/img/icons/og.png" />
   <meta property="og:description" content="LUA скрипты для GTA:SA:MP" />
 </head>
