--- a/fbitools.html
+++ b/fbitools.html
@@ -325,7 +325,7 @@
                           </div>
                           <div>
                             <div class="row">
-                              <div class="col lua-script--compatibility--col">VLASOV RP</div>
+                              <div class="col lua-script--compatibility--col">Samp RP</div>
                               <div class="col lua-script--compatibility--col">Частично совместим</div>
                             </div>
                           </div>
@@ -391,7 +391,7 @@
 
     <footer class="footer">
       <div class="footer-wrap">
-        <span class="footer-copyright"><a href="/">VL4SOV DEV</a> © 2021</span>
+        <span class="footer-copyright"><a href="/">VL4SOV DEV</a> © 2020-2021</span>
 
       </div>
     </footer>
