--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
 
     <footer class="footer">
       <div class="footer-wrap">
-        <span class="footer-copyright"><a href="/">VL4SOV DEV</a> © 2021</span>
+        <span class="footer-copyright"><a href="/">VL4SOV DEV</a> © 2020-2021</span>
 
       </div>
     </footer>
