--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                       <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
                     </li>
                     <li>
-                      <a href="/about.html" data-drupal-link-system-path="node/15">О нас</a>
+                      <a href="/about.html" data-drupal-link-system-path="node/15">INFO</a>
                     </li>
                   </ul>
 
@@ -135,7 +135,7 @@
                   <div class="page--foreground">
                     <div>
                       <h1 class="page--title">
-          О нас
+          INFO
         </h1>
                     </div>
                   </div>
@@ -153,7 +153,7 @@
                         <br />
                         <strong><i class="fab fa-discord"></i></strong> <strong>vl4sov#2625</strong>
                         <br>
-                        <strong><i class="fab fa-telegram-plane"></i></strong> <a data-cke-saved-href="https://t.me/vl4sovkostya" href="https://t.me/vl4sovkostya"><strong>vlasovkostya</strong></a>
+                        <strong><i class="fab fa-telegram-plane"></i></strong> <a data-cke-saved-href="https://t.me/vl4sovkostya" href="https://t.me/vl4sovkostya"><strong>@vl4sovkostya</strong></a>
                         <br>
                         </p>
 
