--- a/fbitools.html
+++ b/fbitools.html
@@ -81,7 +81,7 @@
                         <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
                       </li>
                       <li>
-                        <a href="/about.html" data-drupal-link-system-path="node/15">О нас</a>
+                        <a href="/about.html" data-drupal-link-system-path="node/15">INFO</a>
                       </li>
                     </ul>
                   </nav>
