--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
                       </li>
                       <li>
-                        <a href="/about.html" data-drupal-link-system-path="node/15">О нас</a>
+                        <a href="/about.html" data-drupal-link-system-path="node/15">INFO</a>
                       </li>
                     </ul>
 
@@ -143,11 +143,9 @@
                             </div>
                           </div>
                           <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
-                            <!--[if lte Cкрыл сссылку логов]>
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="https://logs." target="_blank">LOGS</a>
+                              <a href="about.html" target="_blank">ПОДДЕРЖКА</a>
                             </div>
-                            <![endif]-->
                           </div>
                         </div>
                       </nav>
