--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                           </div>
                           <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="about.html" target="_blank">ПОДДЕРЖКА</a>
+                              <a href="about.html" target="_blank">INFO</a>
                             </div>
                           </div>
                         </div>
