--- a/fbitools.html
+++ b/fbitools.html
@@ -184,7 +184,7 @@
 
                   <div class="lua-script--foreground">
                     <div class="lua-script--description">
-                      <p><strong>FBI Tools</strong> - дополнение для проекта SAMP-RP, позволяющее использовать /su и /ticket эффективнее и быстрее. Имеет в себе список статей и множество вариантов их выбора.</p>
+                      <p><strong>FBI Tools</strong> - это многофункциональный скрипт работающий на базе библиотеки 'MoonLoader'</p>
 
                       <hr />
                       <p><strong>Список стандартный функций:</strong></p>
@@ -209,39 +209,18 @@
                       <p>Все клавиши меняются в блоке k конфиг файла: "корень\moonloader\config\Super_Punishment_config.lua".</p>
 
                       <pre>
-<code class="language-lua">k = {
-  repeatsuskey = VK_INSERT, -- Повтор розыска предыдущему игроку
-
-  punmainkey = VK_RBUTTON, -- Основная клавиша выбора игрока
-  punsecondarykey = VK_XBUTTON2, -- Второстепенная клавиша выбора игрока
-
-  fastmainkey = VK_RBUTTON, -- Основная клавиша быстрого розыска
-  fastkey1 = VK_1, -- Второстепенная клавиша быстрого розыска
-  fastkey2 = VK_2,
-  fastkey3 = VK_3,
-  fastkey4 = VK_4,
-  fastkey5 = VK_5,
-  fastkey6 = VK_6,
-  fastkey7 = VK_7,
-  fastkey8 = VK_8,
-  fastkey9 = VK_9,
-  fastkey0 = VK_0,
-}</code></pre>
+<code class="language-lua">
+текст
+</code></pre>
 
                       <p>&nbsp;</p>
 
                       <p>Все названия статей, номера, значения розыска, штрафа и дополнительные параметры изменяются в блоке а.</p>
 
                       <pre>
-<code class="language-lua">a =
-{
-  a0 = "Ложный вызов", -- Название статьи
-  b0 = "АК, Статья №1", -- Номер статьи
-  c0 = "1", -- Уровень розыска
-  d0 = "", -- Штраф
-  e0 = "", -- Цвет. Формат: "{FFFFFF}".
-
--- Далее остальные статьи</code></pre>
+<code class="language-lua">
+текст
+</code></pre>
 
                       <p>&nbsp;</p>
 
@@ -250,49 +229,9 @@
                       <p>Все названия статей, номера, значения розыска, штрафа и дополнительные параметры быстрых статей изменяются в блоке f.</p>
 
                       <pre>
-<code class="language-lua">f =
-{
-
-  a1 = "Нападение на военнослужащего",
-  b1 = "УК, Статья №29",
-  c1 = "4",
-
-  a2 = "Нападение на полицейского",
-  b2 = "УК, Статья №30",
-  c2 = "5",
-
-  a3 = "Нападение на Агента ФБР / Мэра",
-  b3 = "УК, Статья №31",
-  c3 = "6",
-
-  a4 = "Неподчинение сотруднику ПД/ФБР",
-  b4 = "УК, Статья №19",
-  c4 = "2",
-
-  a5 = "Уход",
-  b5 = "УК, Статья №25",
-  c5 = "3",
-
-  a6 = "Нарушение порядка",
-  b6 = "УК, Статья №1",
-  c6 = "1",
-
-  a7 = "Избиение",
-  b7 = "УК, Статья №3",
-  c7 = "2",
-
-  a8 = "Проникновение",
-  b8 = "УК, Статья 14",
-  c8 = "3",
-
-  a9 = "Терроризм",
-  b9 = "УК, Статья №32",
-  c9 = "6",
-
-  a0 = "Похищение",
-  b0 = "УК, Статья №27",
-  c0 = "4",
-}</code></pre>
+<code class="language-lua">
+текст
+</code></pre>
 
                       <p>&nbsp;</p>
 
@@ -304,9 +243,12 @@
                       <strong>Зависимости:</strong>
 
                       <div>
-                        <div>SA:MP 0.3.7 R1</div>
-                        <div>MoonLoader v.026</div>
+                        <div>gta_sa.exe v1.0 US</div>
+                        <div>SAMP 0.3.7 R1</div>
                         <div>SAMPFUNCS v.5.3.3 и выше</div>
+                        <div>moonloader</div>
+                        <div>CLEO</div>
+                        <div>Дополнительные библиотеки загружаются в игре</div>
                         <div>Windows 7 и выше</div>
                       </div>
 
