--- a/fbitools.html
+++ b/fbitools.html
@@ -184,7 +184,7 @@
 
                   <div class="lua-script--foreground">
                     <div class="lua-script--description">
-                      <p><strong>FBI Tools</strong> - это многофункциональный скрипт работающий на базе библиотеки 'MoonLoader', написанный на платформе Lua, целью которого является облегчение работы для сотрудников правоохранительных органов. Включает в себя упрощённую систему выдачи розыска за определённую причину, автоматическую Role Play отыгровку при использовании некоторых команд и/или нажатии определённых кнопок, упрощённый диалог с игроками и красивый интерфейс.</p>
+                      <p><strong>FBI Tools</strong> - это многофункциональный скрипт работающий на базе библиотеки 'MoonLoader', написанный на платформе Lua, целью которого является облегчение работы для сотрудников правоохранительных органов. Включает в себя упрощённую систему выдачи розыска за определённую причину, автоматическую Role Play отыгровку при использовании некоторых команд и/или нажатии определённых кнопок, упрощённый диалог с игроками и красивый интерфейс. А так же многие различные функци которые упрощают работу в государственных организациях.</p>
 
                       <hr />
                       <p><strong>Список стандартный функций:</strong></p>
@@ -240,7 +240,7 @@
 
                   <div class="lua-script--foreground">
                     <div class="lua-script--dependence">
-                      <strong>Зависимости:</strong>
+                      <strong>Требования для работоспособности скрипта:</strong>
 
                       <div>
                         <div>gta_sa.exe v1.0 US</div>
