--- a/lua.html
+++ b/lua.html
@@ -164,6 +164,10 @@
                         <div class="card-footer">
                           <div class="row">
                             <div class="col-6">
+                              <div class="card-icons">
+                              </div>
+                            </div>
+                            <div class="col-6">
                               <div class="card-version" title="Обновлён: 20.04.2021">
                                 Версия 6.13
                               </div>
