--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="/themes/custom/light/favicon.ico" type="image/vnd.microsoft.icon" />
 
-  <title>Главная | vl4sov dev</title>
+  <title>Главная | vl4sov.dev</title>
   <link rel="stylesheet" media="all" href="/themes/custom/light/css/css1.css" />
   <link rel="stylesheet" media="all" href="//fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;display=swap&amp;subset=cyrillic" />
   <link rel="stylesheet" media="all" href="//fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&amp;display=swap&amp;subset=cyrillic" />
@@ -42,7 +42,7 @@
   <meta name="msapplication-TileImage" content="/themes/custom/light/img/icons/apple-icon-144x144.png">
   <meta name="theme-color" content="#dddddd">
 
-  <meta property="og:site_name" content="vl4sov dev" />
+  <meta property="og:site_name" content="vl4sov.dev" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="/" />
   <meta property="og:image" content="/themes/custom/light/img/icons/og.png" />
@@ -268,7 +268,7 @@
 
       <footer class="footer">
         <div class="footer-wrap">
-          <span class="footer-copyright"><a href="/">vl4sov dev</a> © 2020-2021</span>
+          <span class="footer-copyright"><a href="/">vl4sov.dev</a> © 2020-2021</span>
 
         </div>
       </footer>
