--- a/lua.html
+++ b/lua.html
@@ -65,7 +65,7 @@
             <div class=".col-xl-10 col-lg-9 col-md-9 col-sm-6 col-6">
 
               <div class="toggle-menu">
-                <i class="fad fa-bars"></i>
+                <i class="fa fa-bars" aria-hidden="true"></i>
               </div>
               <nav class="navigation">
                 <div>
