--- a/lua.html
+++ b/lua.html
@@ -145,7 +145,7 @@
                     <a href="/lua/how-to-install">Инструкция по установке</a>
                   </div>
                   <div>
-                    <a href="/lua/errors">Частые ошибки</a>
+                    <a href="/errors.html">Частые ошибки</a>
                   </div>
                 </div>
 
