--- a/lua.html
+++ b/lua.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="lua-page--description">
                   <div>
-                    <a href="/lua/how-to-install">Инструкция по установке</a>
+                    <a href="/how-to-install.html">Инструкция по установке</a>
                   </div>
                   <div>
                     <a href="/errors.html">Частые ошибки</a>
