--- a/how-to-install.html
+++ b/how-to-install.html
@@ -145,7 +145,7 @@
 
                       <p>Чистая Steam версия с вырезанными audio (1,03 ГБ):
                         <br />
-                        <a href="https://disk.yandex.ru/d/j9HVr97dVYQGTQ" rel="noreferrer noopener" target="_blank"><strong>Яндекс.Диск</strong></a> / <strong><a href="https://drive.google.com/file/d/14NWtdAPcd6bSiCmr2rtw7YKfM_BLmmuF/view" rel="noreferrer noopener" target="_blank">Google Disk</a></strong>&nbsp;/ <strong><a href="https://link.narvell.nl/d/gta_sa_narvell" rel="noreferrer noopener" target="_blank">NARVELL DEV</a></strong></p>
+                        <a href="https://disk.yandex.ru/d/j9HVr97dVYQGTQ" rel="noreferrer noopener" target="_blank"><strong>Яндекс.Диск</strong></a> / <strong><a href="https://drive.google.com/file/d/14NWtdAPcd6bSiCmr2rtw7YKfM_BLmmuF/view" rel="noreferrer noopener" target="_blank">Google Disk</a></strong>&nbsp;</p>
 
                       <hr />
                       <p>Установить SA:MP 0.3.7 R1: <strong><a href="https://sa-mp.com/" rel="noreferrer noopener" target="_blank">Сайт</a></strong> / <strong><a href="https://files.sa-mp.com/sa-mp-0.3.7-install.exe">Скачать с официального сайта</a></strong></p>
@@ -156,7 +156,7 @@
                       <p>Установить MoonLoader v.026: <strong><a href="https://blast.hk/wiki/moonloader:start" rel="noreferrer noopener" target="_blank">Описание</a></strong> / <strong><a href="https://blast.hk/moonloader/download.php">Скачать c официального сайта</a></strong></p>
 
                       <p>Запустить установщик, галочки установить как на скриншоте и нажать "Далее":</p>
-                      <img alt="moonloader" data-align="center" data-entity-type="file" data-entity-uuid="7676596b-54aa-4c9c-a24b-ce302a715679" src="/sites/default/files/inline-images/2019-01-13_19-52-36.png" />
+                      <img alt="moonloader" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/howmoon.png" />
                       <p>Указать папку с игрой и нажать "Установить".</p>
 
                       <p>Если в ходе установки возникает ошибка при загрузке компонентов, то необходимо установить модули вручную: <strong><a aria-label=" (откроется в новой вкладке)" href="https://github.com/THE-FYP/SAMP.Lua/releases/download/v2.1.0/samp.zip" rel="noreferrer noopener" target="_blank">Скачать</a></strong>
@@ -201,33 +201,6 @@
     </footer>
 
   </div>
-
-  <script type="application/json" data-drupal-selector="drupal-settings-json">
-    {
-      "path": {
-        "baseUrl": "\/",
-        "scriptPath": null,
-        "pathPrefix": "",
-        "currentPath": "node\/12",
-        "currentPathIsAdmin": false,
-        "isFront": false,
-        "currentLanguage": "ru"
-      },
-      "pluralDelimiter": "\u0003",
-      "suppressDeprecationErrors": true,
-      "statistics": {
-        "data": {
-          "nid": "12"
-        },
-        "url": "\/core\/modules\/statistics\/statistics.php"
-      },
-      "user": {
-        "uid": 0,
-        "permissionsHash": "37bedbf167455eb274b2798a867e656d5ceb28ac5f63c56881be8a85116755b1"
-      }
-    }
-  </script>
-  <script src="/themes/custom/light/js/js1.js"></script>
 
     <!-- Yandex.Metrika counter -->
     <!-- Сюда скрипт метрики -->
