--- a/lua.html
+++ b/lua.html
@@ -229,6 +229,7 @@
 
   </div>
 
+  <script src="/themes/custom/light/js/js1.js"></script>
   <!-- Yandex.Metrika counter -->
   <!-- Сюда скрипт метрики -->
   <!-- /Yandex.Metrika counter -->
