--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       </footer>
 
     </div>
-
+    <script src="/themes/custom/light/js/js1.js"></script>
     <!-- Yandex.Metrika counter -->
     <!-- Сюда скрипт метрики -->
     <!-- /Yandex.Metrika counter -->
