--- a/how-to-install.html
+++ b/how-to-install.html
@@ -138,6 +138,17 @@
         </h1>
                     </div>
                   </div>
+             <div id="block-light-content">
+
+              <div class="lua-page">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/">Главная</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Инструкция по установке</li>
+                  </ol>
+                </nav>
+
+                <div>
 
                   <div class="page--foreground">
                     <div class="page--description">
