--- a/how-to-install.html
+++ b/how-to-install.html
@@ -144,6 +144,7 @@
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="/lua.html">Lua</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Инструкция по установке</li>
                   </ol>
                 </nav>
