--- a/errors.html
+++ b/errors.html
@@ -127,6 +127,17 @@
           <div>
             <div id="block-light-content">
 
+              <div class="lua-page">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="/lua.html">Lua</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Решение частых ошибок</li>
+                  </ol>
+                </nav>
+
+                <div>
+
               <article class="article clearfix" data-history-node-id="13" about="/errors" typeof="schema:WebPage">
                 <div class="page">
 
