--- a/fbitools.html
+++ b/fbitools.html
@@ -129,16 +129,6 @@
             <div id="block-light-content">
 
               <article class="article clearfix" data-history-node-id="1" about="/lua/fbi">
-                <div class="lua-script">
-
-                  <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item"><a href="/">Главная</a></li>
-                      <li class="breadcrumb-item"><a href="/lua.html">Lua</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">FBI Tools</li>
-                    </ol>
-                  </nav>
-
                   <div class="lua-script--foreground">
                     <div class="lua-script--version-n-date-update-lg">
                       <div class="row align-items-center">
@@ -180,6 +170,16 @@
                       </div>
                     </div>
 
+                  </div>
+                <div class="lua-script">
+
+                  <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item"><a href="/">Главная</a></li>
+                      <li class="breadcrumb-item"><a href="/lua.html">Lua</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">FBI Tools</li>
+                    </ol>
+                  </nav>
                   </div>
 
                   <div class="lua-script--foreground">
