--- a/fbitools.html
+++ b/fbitools.html
@@ -281,7 +281,7 @@
 
                       <div class="col">
                         <div class="lua-button">
-                          <a class="btn btn-outline-info " href="/lua/how-to-install">
+                          <a class="btn btn-outline-info " href="/how-to-install.html">
       Как установить
     </a>
                         </div>
@@ -289,7 +289,7 @@
 
                       <div class="col">
                         <div class="lua-button">
-                          <a class="btn btn-outline-primary lua-download-btn" href="https://link.narvell.nl/d/super_punishment">
+                          <a class="btn btn-outline-primary lua-download-btn" href="ссылканатулс">
       Скачать
     </a>
                         </div>
