--- a/fbitools.html
+++ b/fbitools.html
@@ -168,6 +168,7 @@
                           </div>
                         </div>
                       </div>
+                    </div>
 
                   </div>
                 <div class="lua-script">
