--- a/fbitools.html
+++ b/fbitools.html
@@ -290,7 +290,7 @@
 
                       <div class="col">
                         <div class="lua-button">
-                          <a class="btn btn-outline-primary lua-download-btn" href="ссылканатулс">
+                          <a class="btn btn-outline-primary lua-download-btn" href="https://github.com/vl4sov/fbitools/raw/master/FBI%20Tools.rar">
       Скачать
     </a>
                         </div>
