--- a/fbitools.html
+++ b/fbitools.html
@@ -309,7 +309,7 @@
 
                   <div class="lua-script--alert-terms--wrapper">
                     <div class="lua-script--alert-terms alert alert-warning alert-dismissible fade show" role="alert">
-                      При установке скрипта, вы соглашаетесь с <a href="/lua/terms">пользовательским соглашением</a>.
+                      При установке скрипта, вы соглашаетесь с <a href="/terms.html">пользовательским соглашением</a>.
                       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
 
