--- a/terms.html
+++ b/terms.html
@@ -59,13 +59,13 @@
           <div class="row">
             <div class=".col-xl-2 col-lg-3 col-md-3 col-sm-6 col-6">
               <div class="logo">
-                <a href="/" rel="home">NARVELL<span class="header--logo-dot">.</span>DEV</a>
+                <a href="/" rel="home">vl4sov<span class="header--logo-dot">.</span>dev</a>
               </div>
             </div>
             <div class=".col-xl-10 col-lg-9 col-md-9 col-sm-6 col-6">
 
               <div class="toggle-menu">
-                <i class="fad fa-bars"></i>
+                <i class="fa fa-bars" aria-hidden="true"></i>
               </div>
               <nav class="navigation">
                 <div>
