--- a/terms.html
+++ b/terms.html
@@ -138,6 +138,13 @@
         </h1>
                     </div>
                   </div>
+                   <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="/lua.html">Lua</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Пользовательское соглашение</li>
+                  </ol>
+                </nav>
 
                   <div class="page--foreground">
                     <div class="page--description">
