--- a/terms.html
+++ b/terms.html
@@ -148,10 +148,7 @@
 
                   <div class="page--foreground">
                     <div class="page--description">
-                      <p>Установку скриптов, скачанных с этого сайта, вы выполняете по собственному желанию, соглашаясь с тем, что вы опытный пользователь ПК и способны адекватно воспринимать инструкции. Автор не несёт ответственность за любые негативные последствия, которые возникли при неправильном использовании скриптов. Также, автор не несёт ответственность за конфликт между своими скриптами и другим программным обеспечением. Автор несёт ответственность только за своё программное обеспечение.
-                        <br data-rich-text-line-break="true" /> Техническая поддержка сайта оставляет за собой право отказать в помощи по каким-либо причинам, не называя их.
-                        <br data-rich-text-line-break="true" />
-                        <br data-rich-text-line-break="true" /> Принимая данное соглашение, вы даёте согласие на сбор личных данных скриптами, для ведения статистики их использования. Эти данные ни при каких обстоятельствах не передаются третьим лицам.</p>
+                      <p>Установку скриптов, скачанных с этого сайта, вы выполняете по собственному желанию, соглашаясь с тем, что вы опытный пользователь ПК и способны адекватно воспринимать инструкции. Автор не несёт ответственность за любые негативные последствия, которые возникли при неправильном использовании скриптов. Также, автор не несёт ответственность за конфликт между своими скриптами и другим программным обеспечением. Автор несёт ответственность только за своё программное обеспечение.</p>
 
                     </div>
                   </div>
