--- a/how-to-install.html
+++ b/how-to-install.html
@@ -160,22 +160,22 @@
                         <a href="https://disk.yandex.ru/d/j9HVr97dVYQGTQ" rel="noreferrer noopener" target="_blank"><strong>Яндекс.Диск</strong></a> / <strong><a href="https://drive.google.com/file/d/14NWtdAPcd6bSiCmr2rtw7YKfM_BLmmuF/view" rel="noreferrer noopener" target="_blank">Google Disk</a></strong>&nbsp;</p>
 
                       <hr />
-                      <p>Установить SA:MP 0.3.7 R1: <strong><a href="https://sa-mp.com/" rel="noreferrer noopener" target="_blank">Сайт</a></strong> / <strong><a href="https://files.sa-mp.com/sa-mp-0.3.7-install.exe">Скачать с официального сайта</a></strong></p>
+                      <p>Установить SA:MP 0.3.7 R1: <strong><a href="https://sa-mp.com/" rel="noreferrer noopener" target="_blank">Скачать с официального сайта</a></strong> / <strong><a href="https://github.com/vl4sov/fbitools/raw/master/Script%20requirements/sa-mp-0.3.7-install.exe">С сервера</a></strong></p>
 
                       <p>Именно эту версию, так как если версия будет выше, то SAMPFUNCS работать не будет, а при запуске будет запускаться одиночная игра.</p>
 
                       <hr />
-                      <p>Установить MoonLoader v.026: <strong><a href="https://blast.hk/wiki/moonloader:start" rel="noreferrer noopener" target="_blank">Описание</a></strong> / <strong><a href="https://blast.hk/moonloader/download.php">Скачать c официального сайта</a></strong></p>
+                      <p>Установить MoonLoader v.026: <strong><a href="https://github.com/vl4sov/fbitools/raw/master/Script%20requirements/setup-moonloader-026.exe">Скачать c сервера</a></strong></p>
 
                       <p>Запустить установщик, галочки установить как на скриншоте и нажать "Далее":</p>
                       <img alt="moonloader" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/howmoon.png" />
                       <p>Указать папку с игрой и нажать "Установить".</p>
 
-                      <p>Если в ходе установки возникает ошибка при загрузке компонентов, то необходимо установить модули вручную: <strong><a aria-label=" (откроется в новой вкладке)" href="https://github.com/THE-FYP/SAMP.Lua/releases/download/v2.1.0/samp.zip" rel="noreferrer noopener" target="_blank">Скачать</a></strong>
+                      <p>Если в ходе установки возникает ошибка при загрузке компонентов, то необходимо установить модули вручную: <strong><a aria-label=" (откроется в новой вкладке)" href="https://github.com/vl4sov/fbitools/raw/master/Script%20requirements/samp.zip" rel="noreferrer noopener" target="_blank">Скачать</a></strong>
                         <br /> Содержимое архива (папку samp) копировать в папку moonloader/lib.</p>
 
                       <hr />
-                      <p>Установить SAMPFUNCS 5.3.3 или 5.4.1 (рекомендуется): <strong><a href="https://blast.hk/wiki/sampfuncs:start" rel="noreferrer noopener" target="_blank">Описание</a></strong></p>
+                      <p>Установить SAMPFUNCS 5.4.1 (рекомендуется): <strong><a href="https://github.com/vl4sov/fbitools/raw/master/Script%20requirements/SAMPFUNCS.asi" rel="noreferrer noopener" target="_blank">Скачать</a></strong></p>
 
                       <p>Файл SAMPFUNCS.asi перенести в папку с игрой.</p>
 
