--- a/how-to-install.html
+++ b/how-to-install.html
@@ -160,12 +160,12 @@
                         <a href="https://disk.yandex.ru/d/j9HVr97dVYQGTQ" rel="noreferrer noopener" target="_blank"><strong>Яндекс.Диск</strong></a> / <strong><a href="https://drive.google.com/file/d/14NWtdAPcd6bSiCmr2rtw7YKfM_BLmmuF/view" rel="noreferrer noopener" target="_blank">Google Disk</a></strong>&nbsp;</p>
 
                       <hr />
-                      <p>Установить SA:MP 0.3.7 R1: <strong><a href="https://sa-mp.com/" rel="noreferrer noopener" target="_blank">Скачать с официального сайта</a></strong> / <strong><a href="https://github.com/vl4sov/fbitools/raw/master/Script%20requirements/sa-mp-0.3.7-install.exe">С сервера</a></strong></p>
+                      <p>Установить SA:MP 0.3.7 R1: <strong><a href="https://sa-mp.com/" rel="noreferrer noopener" target="_blank">Скачать с официального сайта</a></strong></p>
 
                       <p>Именно эту версию, так как если версия будет выше, то SAMPFUNCS работать не будет, а при запуске будет запускаться одиночная игра.</p>
 
                       <hr />
-                      <p>Установить MoonLoader v.026: <strong><a href="https://github.com/vl4sov/fbitools/raw/master/Script%20requirements/setup-moonloader-026.exe">Скачать c сервера</a></strong></p>
+                      <p>Установить MoonLoader v.026: <strong><a href="https://github.com/vl4sov/fbitools/raw/master/Script%20requirements/setup-moonloader-026.exe">Скачать</a></strong></p>
 
                       <p>Запустить установщик, галочки установить как на скриншоте и нажать "Далее":</p>
                       <img alt="moonloader" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/howmoon.png" />
