--- a/how-to-install.html
+++ b/how-to-install.html
@@ -157,7 +157,7 @@
 
                       <p>Чистая Steam версия с вырезанными audio (1,03 ГБ):
                         <br />
-                        <a href="https://disk.yandex.ru/d/j9HVr97dVYQGTQ" rel="noreferrer noopener" target="_blank"><strong>Яндекс.Диск</strong></a> / <strong><a href="https://drive.google.com/file/d/14NWtdAPcd6bSiCmr2rtw7YKfM_BLmmuF/view" rel="noreferrer noopener" target="_blank">Google Disk</a></strong>&nbsp;</p>
+                        <a href="https://disk.yandex.ru/d/qP-v4jROJXlYlA" rel="noreferrer noopener" target="_blank"><strong>Яндекс.Диск</strong></a> / <strong><a href="https://drive.google.com/file/d/1QKQuE__zdUbs9GRqM9T6IpC_PZ9c6Mfd/view?usp=sharing" rel="noreferrer noopener" target="_blank">Google Disk</a></strong>&nbsp;</p>
 
                       <hr />
                       <p>Установить SA:MP 0.3.7 R1: <strong><a href="https://sa-mp.com/" rel="noreferrer noopener" target="_blank">Скачать с официального сайта</a></strong></p>
