--- a/errors.html
+++ b/errors.html
@@ -155,9 +155,8 @@
                         <br />
                         <strong>Скачать: </strong><a href="https://aka.ms/vs/15/release/vc_redist.x86.exe"><strong>x86</strong></a><strong> / </strong><a href="https://aka.ms/vs/15/release/vc_redist.x64.exe"><strong>x64</strong></a></p>
 
-                      <p>Если после загрузки игры  появляется окно с заголовком <strong>Microsoft Visual C++ Runtime Library</strong>, то у вас не установлены дополнительные библиотеки для скрипта. Все нужные библиотеки находятся в архиве со скриптом который вы устанавливаете.
-                      <img alt="libserror" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/libserror.png" />
-                      </p>
+                      <p>Если после загрузки игры  появляется окно с заголовком <strong>Microsoft Visual C++ Runtime Library</strong>, то у вас не установлены дополнительные библиотеки для скрипта. Все нужные библиотеки находятся в архиве со скриптом который вы устанавливаете.</p>
+                      <img alt="libserror" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/libserror.jpg" />
                       
                       <h3>Ошибка DirectX 9.0</h3>
 
