--- a/lua.html
+++ b/lua.html
@@ -220,6 +220,7 @@
     </div>
 
 
+                    <div align”center”>
                        <div class="col">
                         <div class="lua-button">
                           <a class="btn btn-outline-primary lua-download-btn" href="https://vk.me/vl4sov.kostya">
@@ -227,6 +228,7 @@
                           </a>
                         </div>
                       </div>
+                    </div>
         
         
     <footer class="footer">
