--- a/lua.html
+++ b/lua.html
@@ -138,7 +138,12 @@
                 </nav>
 
                 <div>
-                  <h1 class="lua-page--title">Lua скрипты для SA:MP</h1>
+                  <h1 class="lua-page--title">Lua скрипты для SA:MP</h1><br>
+                    <div align="center">
+                      <div class="lua-button">
+                        <a class="btn btn-outline-primary card-button" href="https://vk.me/vl4sov.kostya">Заказать скрипт</a>
+                      </div>
+                    </div>
                 </div>
                 <div class="lua-page--description">
                   <div>
