--- a/lua.html
+++ b/lua.html
@@ -138,13 +138,8 @@
                 </nav>
 
                 <div>
-                  <h1 class="lua-page--title">Lua скрипты для SA:MP<a href="https://vk.me/vl4sov.kostya"><span
-                        class="badge btn-primary">Заказать скрипт</span></a></h1>
-                    <div align="center">
-                      <div class="lua-button">
-                        <a class="btn btn-outline-primary card-button" href="https://vk.me/vl4sov.kostya">Заказать скрипт</a>
-                      </div>
-                    </div>
+                  <a href="https://vk.me/vl4sov.kostya"><span
+                        class="badge btn-primary">Заказать скрипт</a><h1 class="lua-page--title">Lua скрипты для SA:MP</span></h1>
                 </div>
                 <div class="lua-page--description">
                   <div>
