--- a/lua.html
+++ b/lua.html
@@ -138,8 +138,7 @@
                 </nav>
 
                 <div>
-                  <a href="https://vk.me/vl4sov.kostya"><span
-                        class="badge btn-primary">Заказать скрипт</a><h1 class="lua-page--title">Lua скрипты для SA:MP</span></h1>
+                  <h1 class="lua-page--title">Lua скрипты для SA:MP</h1>
                 </div>
                 <div class="lua-page--description">
                   <div>
@@ -219,6 +218,11 @@
       </div>
 
       <div class="push">
+      </div>
+      <div align="center">
+        <div class="lua-button">
+        <a class="btn btn-outline-primary card-button" href="https://vk.me/vl4sov.kostya">Заказать скрипт</a>
+        </div>
       </div>
 
       <footer class="footer">
