--- a/terms.html
+++ b/terms.html
@@ -148,7 +148,7 @@
 
                   <div class="page--foreground">
                     <div class="page--description">
-                      <p>Установку скриптов, скачанных с этого сайта, вы выполняете по собственному желанию, соглашаясь с тем, что вы опытный пользователь ПК и способны адекватно воспринимать инструкции. Автор не несёт ответственность за любые негативные последствия, которые возникли при неправильном использовании скриптов. Также, автор не несёт ответственность за конфликт между своими скриптами и другим программным обеспечением. Автор несёт ответственность только за своё программное обеспечение.</p>
+                      <p>Установку скриптов, скачанных с этого сайта, вы выполняете по собственному желанию, соглашаясь с тем, что вы опытный пользователь ПК и способны адекватно воспринимать инструкции. Автор не несёт ответственность за любые негативные последствия, которые возникли при неправильном использовании скриптов. Также, автор не несёт ответственность за конфликт между своими скриптами и другим программным обеспечением. Автор несёт ответственность только за своё программное обеспечение. При установке скриптов вы соглашаетесь с тем что автор скрипта сможет ограничить доступ тем или иным лицам, а так же вмешиваться в работу скриптов.</p>
 
                     </div>
                   </div>
