--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <div class="row align-items-center">
                           <div class="col-3">
                             <div class="main-page--news--note-date">
-                              30.05.2020
+                              28.04.2021
                             </div>
                           </div>
                           <div class="col-6">
@@ -182,7 +182,7 @@
                       <div class="main-page--news--note-sm">
                         <div>
                           <div class="main-page--news--note-title">
-                            Добавлены новости
+                            Обновление FBI Tools
                           </div>
                         </div>
                         <div class="row">
@@ -193,14 +193,18 @@
                           </div>
                           <div class="col-6">
                             <div class="main-page--news--note-section">
-                              Сайт
+                              version 6.14
                             </div>
                           </div>
                         </div>
                       </div>
 
                       <div class="main-page--news--note-content">
-                        <p>Добавлено отображение новостей на главной странице сайта. В этом разделе будут отображаться все последние новости сайта.</p>
+                        <p>
+                        — Пофикшено отображение курсора в imgui
+                        — Вернул старую систему /mrk
+                        — Переименовано значение {mark} на {mrk}
+                        </p>
 
                       </div>
                     </div>
@@ -209,12 +213,12 @@
                         <div class="row align-items-center">
                           <div class="col-3">
                             <div class="main-page--news--note-date">
-                              24.05.2020
+                              24.04.2021
                             </div>
                           </div>
                           <div class="col-6">
                             <div class="main-page--news--note-title">
-                              Обновление сайта
+                              Создание собственного сайта
                             </div>
                           </div>
                           <div class="col-3">
@@ -246,7 +250,7 @@
                       </div>
 
                       <div class="main-page--news--note-content">
-                        <p>Частично изменён дизайн сайта. Улучшено отображение некоторых элементов и информативность сайта в целом. Страница со списком Lua скриптов перенесена с главной и создана для неё новая. На страницах скриптов добавлена дата обновления, актуальная версия, совместимость с проектами,&nbsp;список зависимостей скрипта от сторонних плагинов и дополнений. Всё это направлено на облегчение установки скриптов и их использования.</p>
+                        <p>Создан собственный сайт студии с отображением скриптов и возможностью их заказа, а так же отображением всей информации по обновлениям и новостям.</p>
 
                       </div>
                     </div>
