--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
                           </div>
                           <div class="col-6">
                             <div class="main-page--news--note-title">
-                              Добавлены новости
+                              Обновление FBI Tools
                             </div>
                           </div>
                           <div class="col-3">
                             <div class="main-page--news--note-section">
-                              Сайт
+                              version 6.14
                             </div>
                           </div>
                         </div>
@@ -201,8 +201,8 @@
 
                       <div class="main-page--news--note-content">
                         <p>
-                        — Пофикшено отображение курсора в imgui
-                        — Вернул старую систему /mrk
+                        — Пофикшено отображение курсора в imgui\n
+                        — Вернул старую систему /mrk\n
                         — Переименовано значение {mark} на {mrk}
                         </p>
 
@@ -218,7 +218,7 @@
                           </div>
                           <div class="col-6">
                             <div class="main-page--news--note-title">
-                              Создание собственного сайта
+                              Создание сайта
                             </div>
                           </div>
                           <div class="col-3">
@@ -232,7 +232,7 @@
                       <div class="main-page--news--note-sm">
                         <div>
                           <div class="main-page--news--note-title">
-                            Обновление сайта
+                            Создание сайта
                           </div>
                         </div>
                         <div class="row">
