--- a/index.html
+++ b/index.html
@@ -200,11 +200,9 @@
                       </div>
 
                       <div class="main-page--news--note-content">
-                        <p>
-                        — Пофикшено отображение курсора в imgui\n
-                        — Вернул старую систему /mrk\n
-                        — Переименовано значение {mark} на {mrk}
-                        </p>
+                        <p>— Пофикшено отображение курсора в imgui</p>
+                        <p>— Вернул старую систему /mrk</p>
+                        <p>— Переименовано значение {mark} на {mrk}</p>
 
                       </div>
                     </div>
