--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                       </div>
 
                       <div class="main-page--news--note-content">
-                        <p>Создан собственный сайт студии с отображением скриптов и возможностью их заказа, а так же отображением всей информации по обновлениям и новостям.</p>
+                        <p>Создан собственный сайт студии с отображением скриптов и возможностью заказа собственных, а так же отображением всей информации по обновлениям и новостям.</p>
 
                       </div>
                     </div>
