--- a/fbitools.html
+++ b/fbitools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr" prefix="content: http://purl.org/rss/1.0/modules/content/  dc: http://purl.org/dc/terms/  foaf: http://xmlns.com/foaf/0.1/  og: http://ogp.me/ns#  rdfs: http://www.w3.org/2000/01/rdf-schema#  schema: http://schema.org/  sioc: http://rdfs.org/sioc/ns#  sioct: http://rdfs.org/sioc/types#  skos: http://www.w3.org/2004/02/skos/core#  xsd: http://www.w3.org/2001/XMLSchema# ">
-<title>FBI Tools | vl4sov.dev</title>
-<meta property="og:title" content="FBI Tools | vl4sov.dev" />
+<title>FBI Tools | vl4sov.ml</title>
+<meta property="og:title" content="FBI Tools | vl4sov.ml" />
 <head>
   <meta charset="utf-8" />
   <meta name="MobileOptimized" content="width" />
@@ -41,7 +41,7 @@
   <meta name="msapplication-TileImage" content="/themes/custom/light/img/icons/apple-icon-144x144.png">
   <meta name="theme-color" content="#dddddd">
 
-  <meta property="og:site_name" content="vl4sov.dev" />
+  <meta property="og:site_name" content="vl4sov.ml" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="/" />
   <meta property="og:image" content="/themes/custom/light/img/icons/og.png" />
@@ -58,7 +58,7 @@
           <div class="row">
             <div class=".col-xl-2 col-lg-3 col-md-3 col-sm-6 col-6">
               <div class="logo">
-                <a href="/" rel="home">vl4sov<span class="header--logo-dot">.</span>dev</a>
+                <a href="/" rel="home">vl4sov<span class="header--logo-dot">.</span>ml</a>
               </div>
             </div>
             <div class=".col-xl-10 col-lg-9 col-md-9 col-sm-6 col-6">
@@ -333,7 +333,7 @@
 
     <footer class="footer">
       <div class="footer-wrap">
-        <span class="footer-copyright"><a href="/">vl4sov.dev</a> © 2020-2021</span>
+        <span class="footer-copyright"><a href="/">vl4sov.ml</a> © 2020-2021</span>
 
       </div>
     </footer>
