--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="/themes/custom/light/favicon.ico" type="image/vnd.microsoft.icon" />
 
-  <title>Главная | vl4sov.dev</title>
+  <title>Главная | vl4sov.ml</title>
   <link rel="stylesheet" media="all" href="/themes/custom/light/css/css1.css" />
   <link rel="stylesheet" media="all" href="//fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;display=swap&amp;subset=cyrillic" />
   <link rel="stylesheet" media="all" href="//fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&amp;display=swap&amp;subset=cyrillic" />
@@ -41,7 +41,7 @@
   <meta name="msapplication-TileImage" content="/themes/custom/light/img/icons/apple-icon-144x144.png">
   <meta name="theme-color" content="#dddddd">
 
-  <meta property="og:site_name" content="vl4sov.dev" />
+  <meta property="og:site_name" content="vl4sov.ml" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="/" />
   <meta property="og:image" content="/themes/custom/light/img/icons/og.png" />
@@ -58,7 +58,7 @@
             <div class="row">
               <div class=".col-xl-2 col-lg-3 col-md-3 col-sm-6 col-6">
                 <div class="logo">
-                  <a href="/" rel="home">vl4sov<span class="header--logo-dot">.</span>dev</a>
+                  <a href="/" rel="home">vl4sov<span class="header--logo-dot">.</span>ml</a>
                 </div>
               </div>
               <div class=".col-xl-10 col-lg-9 col-md-9 col-sm-6 col-6">
@@ -132,7 +132,7 @@
                   <div class="main-page--logo_nav">
                     <div>
                       <div class="main-page--logo">
-                        <a href="/" rel="home">vl4sov<span class="main-page--logo-dot">.</span>dev</a>
+                        <a href="/" rel="home">vl4sov<span class="main-page--logo-dot">.</span>ml</a>
                       </div>
                       <nav>
                         <div class="row d-flex justify-content-center">
@@ -269,7 +269,7 @@
 
       <footer class="footer">
         <div class="footer-wrap">
-          <span class="footer-copyright"><a href="/">vl4sov.dev</a> © 2020-2021</span>
+          <span class="footer-copyright"><a href="/">vl4sov.ml</a> © 2020-2021</span>
 
         </div>
       </footer>
