--- a/lua.html
+++ b/lua.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>LUA | vl4sov.dev</title>
-  <meta property="og:title" content="LUA | vl4sov.dev" />
+  <title>LUA | vl4sov.ml</title>
+  <meta property="og:title" content="LUA | vl4sov.ml" />
   <meta name="MobileOptimized" content="width" />
   <meta name="HandheldFriendly" content="true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -42,7 +42,7 @@
   <meta name="msapplication-TileImage" content="/themes/custom/light/img/icons/apple-icon-144x144.png">
   <meta name="theme-color" content="#dddddd">
 
-  <meta property="og:site_name" content="vl4sov.dev" />
+  <meta property="og:site_name" content="vl4sov.ml" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="/" />
   <meta property="og:image" content="/themes/custom/light/img/icons/og.png" />
@@ -59,7 +59,7 @@
           <div class="row">
             <div class=".col-xl-2 col-lg-3 col-md-3 col-sm-6 col-6">
               <div class="logo">
-                <a href="/" rel="home">vl4sov<span class="header--logo-dot">.</span>dev</a>
+                <a href="/" rel="home">vl4sov<span class="header--logo-dot">.</span>ml</a>
               </div>
             </div>
             <div class=".col-xl-10 col-lg-9 col-md-9 col-sm-6 col-6">
@@ -227,7 +227,7 @@
 
       <footer class="footer">
         <div class="footer-wrap">
-          <span class="footer-copyright"><a href="/">vl4sov.dev</a> © 2020-2021</span>
+          <span class="footer-copyright"><a href="/">vl4sov.ml</a> © 2020-2021</span>
 
         </div>
       </footer>
